<resources>
    <string name="app_name">CloneIgFeed</string>
    <string name="postingan">Postingan</string>
    <string name="_5">5</string>
    <string name="_123">123</string>
    <string name="pengikut">Pengikut</string>
    <string name="mengikuti">Mengikuti</string>
    <string name="edit_profil">Edit Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>